Extract environment variables to an env_file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,8 @@ services:
 
   backend:
     build: ./backend
-    environment:
-      DATABASE_URL: postgresql://user:password@db:5432/hello_db
+    env_file:
+      - ./backend/.env
     ports:
       - "8000:8000"
     depends_on:
